
Fri Jul 7 15:40:42 EDT 1995	Paul Park	(pjpark@mit.edu)
	* Makefile.in - Remove all explcitit library handling.
	* configure.in - Add USE_<mumble> and KRB5_LIBRARIES.

Wed Jul  5 20:03:37 1995  Theodore Y. Ts'o  (tytso@dcl)

	* krcp.c, krlogin.c, krlogind.c, krshd.c, login.c: Remove
		declaration of errno altoghether.  "extern int errno;" is
		always wrong.

	* login.c (main): Don't use the TIOCLSET ioctl unless we're not
		using POSIX_TERMIOS.  Don't just blindly set the file
		status flags to 0.  Instead, do a fcntl(0, F_GETFL), and
		then reset the nonblocking flags.

Sun Jul  2 19:48:27 1995  Sam Hartman  <hartmans@tertius.mit.edu>

	* krcp.c: make errno extern

	* krshd.c: errno should be extern so it doesn't mask the libc
        definition in AIX.

Tue Jun 27 23:50:56 1995  Tom Yu  (tlyu@dragons-lair)

	* krlogin.c: don't redeclare noltc, defltc if we happen to have
		TIOCGLTC in addition to POSIX_TERMIOS

Tue Jun 27 16:18:49 EDT 1995	Paul Park	(pjpark@mit.edu)
	* configure.in - When checking number/type of arguments to {get,set}pgrp
		attempt to set __STDC__ in a vain attempt to ensure that we
		get function prototype checking turned on.  OSF/1's native
		compiler didn't really care what's passed as arguments unless
		__STDC__'s set.
	* krcp.c - Change usage of BUFSIZ to RCP_BUFSIZ.  Remove & from in
		front of array.  It's redundant.
	* krlogin.c - Change usage of BUFSIZ to RLOGIN_BUFSIZ.  Add signal
		name parameter to signal handlers to conform to prototype.
	* krlogind.c - Change usage of BUFSIZ to RLOGIND_BUFSIZ.  Cast 4th
		argument to setsockopt(2) to be const char *.
	* krsh.c - Change usage of BUFSIZ to RSH_BUFSIZ.  Cast 4th argument
		to setsockopt(2) to be const char *.
	* krshd.c - Change usage of BUFSIZ to RSHD_BUFSIZ.

Thu Jun 22 14:36:46 1995  Theodore Y. Ts'o  <tytso@dcl>

	* configure.in: Change AC_HAVE_HEADERS with AC_CHECK_HEADERS, and
		check for string.h as well.

	* krsh.c: Don't include ext-proto.h; move the #include of the